Navigation mobile fix

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body{
     background-color: #4b4b4b;
     color: white;
     font-family: 'Montserrat', sans-serif;   
+    position: relative;
 
 }
 
@@ -80,6 +81,10 @@ p.name{
     -moz-box-shadow: 0px -20px 33px 2px rgba(0,0,0,0.54);
     box-shadow: 0px -20px 33px 2px rgba(0,0,0,0.54);
     padding-left: 4%;
+    height: 50px;
+    padding-top: 35px;
+    padding-bottom: 35px;
+    transition: all 0.3s;
 }
 
 .nav-link {
@@ -103,7 +108,7 @@ p.name{
 .navbar-brand img {
     width: 220px;
     position: absolute;
-    margin-top: -45px;
+    margin-top: -30%;
     -webkit-filter: drop-shadow(5px 5px 5px #222);
   filter: drop-shadow(5px 5px 5px #222);
 }
@@ -113,6 +118,10 @@ a.navbar-brand {
     padding-bottom: 0;
 }
 
+.navbar.compressed{
+    padding-top: 0px;
+    padding-bottom: 0px;
+}
 
 .col-md-6{
     padding: 2em;
@@ -126,8 +135,16 @@ h1{
     font-weight: bold;
 }
 
+
 /* always in the end of css */
 @media (max-width: 990px) {
+
+    .navbar{
+        padding-top: 20px;
+        padding-bottom: 10px;
+
+    }
+
     .navbar-brand {
         position: absolute;
         top: 0;
@@ -136,7 +153,20 @@ h1{
     }
 
     .navbar-brand img {
-        width: 200px;
-        margin-top: -50px;
+        width: 100%;
+        margin-top: -30%;
+        padding: 30px;
     }
+
+    .navbar-toggler {
+        padding: 3px;
+        margin-top: -2%;
+    }
+
+    .navbar.shrink{
+        padding-top: 10px;
+    padding-bottom: 2px;
+    }
+    
+
 }
